# nms

./: .gitignore  .sesskey  ansible.cfg  pyproject.toml  readme.MD  requirements.txt
configs/: gigabitethernet0_1.cfg
monitoring/: monitoring_oids.csv  prometheus_exporter.py  rough.ipynb
src/: .sesskey  ansible_output.txt  main.py
src/ansible/: ansible.cfg  ansible_gen.py
src/ansible/configs/: router1_ipv4.txt  router1_ipv6.txt  router1_ospf.txt  router2_ipv4.txt  router2_ipv6.txt  router3_ipv4.txt  router3_ipv6.txt  router4_ipv4.txt  router5_ipv4.txt  router5_ipv6.txt
src/ansible/csv/: ansible_hosts.csv
src/ansible/inventory/: hosts.yaml
src/ansible/playbooks/: config_ipv4.yaml
src/ansible/roles/router/templates/: ipv4.j2  ipv6.j2  master_template.j2
src/automation/: ansible_gen.py
src/automation/configs/: router1_all.txt  router2_all.txt  router3_all.txt  router4_all.txt  router5_all.txt
src/automation/csv/: device_config_info.csv
src/automation/inventory/: hosts.yaml
src/automation/playbooks/: config.yaml  config_ipv6.yaml  config_ospf.yaml
src/backups/: test_conf.txt
src/classes/: router.py
src/db/: test.sh
src/email_service/: .dockerignore  Dockerfile  README.md  email_sender.py  main.py  monitoring_stack.txt  requirements.txt  test.py
src/gui/: .sesskey  configs.py  forms.py  metrics.py  navbar.py  utils.py
src/monitoring/: GetSNMPdata.py  monitoring_configs.csv  prometheus_exporter.py  rough.ipynb
src/python/: quick_configs.py
src/python/templates/: bgp.j2  ipv4.j2  ipv4_route.j2  ipv6.j2  ipv6_route.j2  ospf.j2
(+7 files in other folders)
