[project]
name = "nms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.5.0",
    "prometheus-client>=0.25.0",
    "pymongo>=4.16.0",
    "pyright>=1.1.408",
    "pysnmp>=7.1.23",
    "python-fasthtml>=0.13.3",
    "ruff>=0.15.10",
]
